Closed Bug 200378 Opened 23 years ago Closed 22 years ago

Command+clicking in the Bookmarks Toolbar does not open a new window

Categories

(Camino Graveyard :: Accessibility, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino0.8

People

(Reporter: jon, Assigned: sfraser_bugs)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4a) Gecko/20030401 Chimera/0.7+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4a) Gecko/20030401 Chimera/0.7+ I hold down the command key and click on a bookmark in the Bookmakrs Toolbar and it does not open a new window. It would be nice if this was the behavior since it would be consistent with what happens when I command click on a link in the browser window. Reproducible: Always Steps to Reproduce: 1. 2. 3.
Confirmed using Camino/20030402??. Curiously, command+clicking Bookmarks Toolbar items *does* spawn new tabs if that's set in Preferences/Navigation/Tabbed Browsing/"Clicking a link with the Command key down:" is set to "Opens a new tab", but *doesn't* spawn a new window if it's set to "Opens a new window".
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: command clicking in the Bookmarks Toolbar does not open a new window → Command+clicking in the Bookmarks Toolbar does not open a new window
still true with 2003082402.
Taking. This needs to work for both bookmark toolbars, and items in bookmark toolbar submenus (and maybe even the bookmarks menu itself).
Assignee: bryner → sfraser
Status: NEW → ASSIGNED
This patch moves all of the code that opens bookmarks (from bookmark buttons, bookmark menus etc) into one central method, which checks the prefs, and key modifiers, and opens in new window/tab in foreground/background accordingly. So now we have these behaviours: * Command-clicking a toolbar tab group adds the new tabs (or puts them in a new window), rather than replacing tabs * If the prefs are set to open new windows, command-clicking bookmarks and tab groups will open them in new windows (optionally behind the current window) * Holding down the command-click while choosing bookmarks or tab groups from the menus (incl. dock menu and toolbar folder menu) will follow the new tab/new window behavior
Comment on attachment 141980 [details] [diff] [review] Factor the bookmarks opening code, and fix this bug looks good, builds with no additional warnings so you got all the call sites. the only issue is that if you cmd-dblclick a bookmark in the manager, if it wasn't already seleted, you just end up toggling it. you have to have the item previously selected before the dbl-click actually works. however, that's probably beyond the scope of this patch and an issue with our outliner. r=pink
Attachment #141980 - Flags: review+
getting on 0.8 radar.
Target Milestone: --- → Camino0.8
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: