Fix bug 200378 and bug 228478: factor all the bookmark opening code into one method in MainController, so that we always look for the Command-key, and respect the prefs to open in new windows or tabs. r=pink.